Add Services, Adjust HttpClient configuration
Add ChannelEngineService
Add OrdersService
Add order model
Register services in DI service

--- a/ChannelEngineApp/appsettings.json
+++ b/ChannelEngineApp/appsettings.json
@@ -2,6 +2,6 @@
   "AppConfig": {
     "ApiBaseUri": "https://api-dev.channelengine.net/api/",
     "ApiVersion": "v2/",
-    "UserAgent": ".NET Core CLI" 
+    "UserAgent": ".NETCoreConsole" 
   } 
 }
