--- a/ChannelEngineApp/appsettings.json
+++ b/ChannelEngineApp/appsettings.json
@@ -1,7 +1,17 @@
 {
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
   "AppConfig": {
     "ApiBaseUri": "https://api-dev.channelengine.net/api/",
-    "ApiVersion": "v2/",
-    "UserAgent": ".NETCoreConsole" 
-  } 
+    "ApiVersion": "v2/"
+  },
+  "ApiConfig": {
+    "OrdersEndpoint": "orders",
+    "ProductsEndpoint": "products"
+  }
 }
