Add shared configuration, Refactor providers

--- a/ChannelEngineApp/ChannelEngineConsoleApp.csproj
+++ b/ChannelEngineApp/ChannelEngineConsoleApp.csproj
@@ -3,7 +3,6 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <UserSecretsId>5d0b12f8-3727-4345-81c6-d2848913ed87</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
     <None Update="appsettings.json">
@@ -21,5 +20,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Services\Services.csproj" />
+    <ProjectReference Include="..\Shared\Shared.csproj" />
   </ItemGroup>
 </Project>
