--- a/ChannelEngineApp/ChannelEngineConsoleApp.csproj
+++ b/ChannelEngineApp/ChannelEngineConsoleApp.csproj
@@ -10,6 +10,8 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="8.1.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.7" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.7" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.7" />
