--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="ConsoleTables" Version="2.4.2" />
+    <PackageReference Include="MediatR" Version="8.1.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.7" />
     <PackageReference Include="RestSharp" Version="106.11.4" />
     <PackageReference Include="RestSharp.Serializers.NewtonsoftJson" Version="106.11.4" />
