--- a/Contracts/Contracts.csproj
+++ b/Contracts/Contracts.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ConsoleTables" Version="2.4.2" />
     <PackageReference Include="RestSharp" Version="106.11.4" />
   </ItemGroup>
 
