--- a/Repository/Repository.csproj
+++ b/Repository/Repository.csproj
@@ -2,6 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <RootNamespace>Repository</RootNamespace>
+    <AssemblyName>Repository</AssemblyName>
+    <Company>Repository</Company>
+    <Product>Repository</Product>
   </PropertyGroup>
 
   <ItemGroup>
