--- a/ChannelEngineApp/ChannelEngineConsoleApp.csproj
+++ b/ChannelEngineApp/ChannelEngineConsoleApp.csproj
@@ -23,5 +23,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Repository\Repository.csproj" />
     <ProjectReference Include="..\Shared\Shared.csproj" />
+    <ProjectReference Include="..\Utilities\Utilities.csproj" />
   </ItemGroup>
 </Project>
