--- a/ChannelEngineWebApp/ChannelEngineWebApp.csproj
+++ b/ChannelEngineWebApp/ChannelEngineWebApp.csproj
@@ -9,4 +9,8 @@
       <ProjectReference Include="..\Shared\Shared.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.ProtectedBrowserStorage" Version="0.1.0-alpha.19521.1" />
+    </ItemGroup>
+
 </Project>
